<resources>
    <string name="hiddentopvalue" translatable="false">30dp</string>
    <string name="app_name" translatable="false">Crocodingo</string>
    <string name="tytul" translatable="false">tytul</string>
    <string name="GoogleLogin" translatable="false">GoogleLogin</string>
    <string name="ustawienia" translatable="false">ustawienia</string>
    <string name="google_storage_bucket" translatable="false">czerwone-krokodyle.appspot.com</string>
    <string name="project_id" translatable="false">czerwone-krokodyle</string>
    <string name="version" translatable="false">1.8.4</string>
    <string name="priority" translatable="false">RELEASE</string>
    <string name="priority_version" translatable="false">RELEASE 1.8.4</string>
    <string name="Credits">Realizacja</string>
    <string name="wroc_do_startu">Wróć do startu</string>
    <string name="special_thanks">Specjalne\npodziękowania:</string>
    <string name="wyjasnienie">Wyjaśnienie</string>
    <string name="next">Następne</string>
    <string name="prev">Poprzednie</string>
    <string name="wroc_do_pytan">Wróć do pytań</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="dzwiek_w_menu">Dźwięk w menu</string>
    <string name="wibracje">Wibracje</string>
    <string name="kup">Kup</string>
    <string name="zaloz">Załóż</string>
    <string name="zdejmij">Zdejmij</string>
    <string name="zobacz_bledne">Zobacz błędne</string>
    <string name="wyloguj">wyloguj</string>
    <string name="zaloguj_sie">Zaloguj się przez google</string>
    <string name="wroc">wróc</string>
    <string name="Polski" translatable="false">Polski</string>
    <string name="Angielski" translatable="false">English (BETA)</string>
    <string name="Hiszpanski" translatable="false">Espanol</string>
    <string name="pytanie">Pytanie</string>
    <string name="language">Język</string>
    <string name="sounds_and_vibrations">Dźwięk i wibracje</string>
    <string name="claim">odbierz</string>
    <string name="done">(Ukończone)</string>
    <string name="conowego">Lista zmian w\n</string>
    <string name="wybierz_kat">Wybierz kategorię</string>
    <string name="powiadomienia">Powiadomienia</string>
    <string name="zakoncz">Zakończ</string>
    <string name="zamknij">Zamknij</string>
</resources>
