<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/hiddentop"
        android:orientation="horizontal"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/menu_top_pytania"
        android:layout_below="@id/hiddentop"
        >
        <Button
            android:layout_below="@id/hiddentop"
            android:id="@+id/wroc_do_pytan_new_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wroc_do_pytan"
            android:onClick="Zmien_widoki"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="#333333"
            />

        <TextView
            android:id="@+id/numer_pytania"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Pytanie 1"
            android:layout_marginLeft="3dp"
            android:textSize="20sp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menu_top_pytania"
        android:layout_above="@id/select_id_containter">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/miejsce_na_pytanie">
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_above="@id/hiddenbottom"
        android:id="@+id/select_id_containter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prevbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev"
            android:onClick="PrevPytanie"
            android:layout_marginRight="3dp"
            android:backgroundTint="#333333"
            />

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:onClick="NextPytanie"
            android:layout_marginLeft="3dp"
            android:backgroundTint="#333333"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/hiddenbottom"
        android:layout_alignParentBottom="true"
        android:alwaysDrawnWithCache="false"
        android:orientation="horizontal"
        android:layout_height="30dp"
        android:layout_width="match_parent"
        />
</RelativeLayout>