<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/hiddentop"
        android:orientation="horizontal"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/menu_top_pytania"
        android:layout_below="@id/hiddentop"
        >
        <Button
            android:layout_below="@id/hiddentop"
            android:id="@+id/wroc_do_menu_poj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wroc_do_startu"
            android:onClick="Zmien_widoki"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="#333333"
            />

        <Button
            android:layout_below="@id/hiddentop"
            android:id="@+id/karta_wzorow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="karta wzorów"
            android:onClick="Zmien_widoki"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="#333333"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menu_top_pytania"
        android:layout_above="@id/select_id_containter">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/miejsce_na_pytanie_kategoria">
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_above="@id/hiddenbottom"
        android:id="@+id/select_id_containter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/wyjasnienie_poj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:backgroundTint="#333333"
            android:onClick="WyjasnijToggle"
            android:text="@string/wyjasnienie" />

        <Button
            android:id="@+id/nextnewbutton_pojedyncze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:onClick="GnerujPytanieKategorie"
            android:layout_marginLeft="3dp"
            android:backgroundTint="#333333"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/hiddenbottom"
        android:layout_alignParentBottom="true"
        android:alwaysDrawnWithCache="false"
        android:orientation="horizontal"
        android:layout_height="30dp"
        android:layout_width="match_parent"
        />
</RelativeLayout>