<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/hiddentop"
        android:orientation="horizontal"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/menu_top_pytania"
        android:layout_below="@id/hiddentop"
        >
        <Button
            android:layout_below="@id/hiddentop"
            android:id="@+id/wroc_do_pytan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wroc_do_pytan"
            android:onClick="Zmien_widoki"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="#333333"
            />

        <TextView
            android:id="@+id/numer_pytania"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Pytanie 1"
            android:textSize="20sp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/tresc_pytania"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        android:layout_below="@id/menu_top_pytania"
        android:layout_centerHorizontal="true"
         />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="wow"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:background="@drawable/custom_container"
            android:backgroundTint="@color/ckpink"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="10pkt"
                android:textAlignment="center"
                android:textSize="14sp" />
        </RelativeLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_below="@+id/tresc_pytania"
        android:id="@+id/select_id_containter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prevbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev"
            android:onClick="PrevPytanie"
            android:layout_marginRight="3dp"
            android:backgroundTint="#333333"
            />

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:onClick="NextPytanie"
            android:layout_marginLeft="3dp"
            android:backgroundTint="#333333"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/select_id_containter"
        >

        <android.widget.Button
            android:id="@+id/odp_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setAnswer"
            />

        <android.widget.Button
            android:id="@+id/odp_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setAnswer"
            />

        <android.widget.Button
            android:id="@+id/odp_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setAnswer"
            />

        <android.widget.Button
            android:id="@+id/odp_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setAnswer"
            />
    </LinearLayout>
</RelativeLayout>